[package]
name = "Firestorm"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
    "crates/fs_window",
    "crates/fs_renderer",
    "crates/fs_handles",
    "."
]

[dependencies]
fs_window = { path = "crates/fs_window" }
fs_renderer = { path = "crates/fs_renderer" }
env_logger = "0.11.8"
log = "0.4.27"
