[package]
name = "Firestorm"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
    ".",
    "crates/fs_window",
    "crates/fs_renderer",
    "crates/fs_handles",
    "crates/fs_gltf", 
    "crates/fs_resources", 
    "crates/fs_engine"]

[dependencies.fs_engine]
path = "crates/fs_engine"

[profile.dev]
opt-level = 1

[profile.release]
codegen-units = 1
lto = "fat"


