[package]
name = "fs_gltf"
version = "0.1.0"
edition = "2024"

[dependencies]
glam = "0.30.4"

[dependencies.fs_renderer]
path = "../fs_renderer"

[dependencies.gltf]
version = "1.4.1"
features = [
    "KHR_lights_punctual", 
    "KHR_materials_emissive_strength", 
    "KHR_materials_ior", 
    "KHR_materials_pbrSpecularGlossiness",
    "KHR_materials_specular",
    "KHR_materials_transmission",
    "KHR_materials_unlit",
    "KHR_texture_transform",
    "KHR_materials_variants",
    "KHR_materials_volume",
]