[package]
name = "fs_renderer"
version = "0.1.0"
edition = "2024"

[build-dependencies]
walkdir = "2"

[dependencies]
log = "0.4.27"
enumflags2 = "0.7.11"
glam = "0.30.4"

[dependencies.windows]
version = "0.61.1"
features = [
    "Win32_Graphics_Direct3D_Fxc", 
    "Win32_Graphics_Direct3D12", 
    "Win32_Graphics_Dxgi_Common", 
    "Win32_Graphics_Gdi", 
    "Win32_System_Threading", 
    "Win32_Security"]

[dependencies.fs_window]
path = "../fs_window"

[dependencies.fs_handles]
path = "../fs_handles"
